update ContactController.java, UserController.java, swagger.yaml