@@ -4,23 +4,22 @@ import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.web.bind.annotation.*;
-import ru.averkiev.greenchat_user.exceptions.UserNotFoundException;
 import ru.averkiev.greenchat_user.models.User;
 import ru.averkiev.greenchat_user.models.dto.contact.ContactDTO;
-import ru.averkiev.greenchat_user.services.impl.ContactServiceImpl;
-import ru.averkiev.greenchat_user.services.impl.UserServiceImpl;
+import ru.averkiev.greenchat_user.services.ContactService;
+import ru.averkiev.greenchat_user.services.UserService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Класс представляет собой контроллер для доступа и изменению информации о пользователях.
  * @author mrGreenNV
  */
 @RestController
-@RequestMapping("greenchat/users/{userId}/contacts")
+@RequestMapping("greenchat/users-service/v1/users/{userId}/contacts")
 @RequiredArgsConstructor
 @EnableMethodSecurity
 public class ContactController {
@@ -28,12 +27,12 @@ public class ContactController {
     /**
      * Сервис для управления контактами.
      */
-    private final ContactServiceImpl contactService;
+    private final ContactService contactService;
 
     /**
      * Сервис для управления Пользователями.
      */
-    private final UserServiceImpl userService;
+    private final UserService userService;
 
     /**
      * Для приведения классов к DTO
@@ -46,24 +45,15 @@ public class ContactController {
      * @param contactLogin идентификатор пользователя, являющегося будущим контактом.
      * @return статус запроса.
      */
+    @PreAuthorize("hasRole('ROLE_USER')")
     @PostMapping()
     public ResponseEntity<HttpStatus> createContact(@PathVariable Long userId, @RequestBody String contactLogin) {
-        try {
 
-            User contactUser = userService.getUserByLogin(contactLogin)
-                    .orElseThrow(() -> new UserNotFoundException("Пользователь с логином: " + contactLogin + " не найден."));
+        User contactUser = userService.getUserByLogin(contactLogin);
+        User user = userService.getUserById(userId);
+        contactService.createContact(user, contactUser);
 
-            User user = userService.getUserById(userId)
-                    .orElseThrow(() -> new UserNotFoundException("Пользователь с id: " + userId + " не найден."));
-
-            contactService.createContact(user, contactUser);
-
-            return ResponseEntity.ok(HttpStatus.OK);
-
-        } catch (UserNotFoundException unfEx) {
-            unfEx.printStackTrace();
-            return ResponseEntity.ok(HttpStatus.BAD_REQUEST);
-        }
+        return ResponseEntity.ok(HttpStatus.OK);
     }
 
     /**
@@ -72,24 +62,15 @@ public class ContactController {
      * @param contactId идентификатор удаляемого контакта.
      * @return статус запроса.
      */
+    @PreAuthorize("hasRole('ROLE_USER')")
     @DeleteMapping("{contactId}")
     public ResponseEntity<HttpStatus> deleteContact(@PathVariable Long userId, @PathVariable Long contactId) {
-        try {
 
-            User contactUser = userService.getUserById(contactId)
-                    .orElseThrow(() -> new UserNotFoundException("Пользователь с id: " + contactId + " не найден."));
+        User contactUser = userService.getUserById(contactId);
+        User user = userService.getUserById(userId);
+        contactService.deleteContactByUser(user, contactUser);
 
-            User user = userService.getUserById(userId)
-                    .orElseThrow(() -> new UserNotFoundException("Пользователь с id: " + userId + " не найден."));
-
-            contactService.deleteContactByUser(user, contactUser);
-
-            return ResponseEntity.ok(HttpStatus.OK);
-
-        } catch (UserNotFoundException unfEx) {
-            unfEx.printStackTrace();
-            return ResponseEntity.ok(HttpStatus.BAD_REQUEST);
-        }
+        return ResponseEntity.ok(HttpStatus.OK);
     }
 
     /**
@@ -97,14 +78,11 @@ public class ContactController {
      * @param userId идентификатор пользователя, для которого выводится список контактов.
      * @return статус запроса.
      */
+    @PreAuthorize("hasAnyRole('ROLE_USER', 'ROLE_ADMIN')")
     @GetMapping()
     public ResponseEntity<List<ContactDTO>> showUserContacts(@PathVariable Long userId) {
 
-        List<ContactDTO> contacts = contactService.getContactByUser(userService.getUserById(userId)
-                .orElseThrow(() -> new UserNotFoundException("Пользователь с id: " + userId + " не найден."))).stream()
-                .map(contact -> modelMapper.map(contact, ContactDTO.class))
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(contacts);
+        return ResponseEntity.ok(contactService.getContactByUser(userService.getUserById(userId)).stream()
+                .map(contact -> modelMapper.map(contact, ContactDTO.class)).toList());
     }
 }
